Fix for the overlapping Remove RSVP button

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -158,6 +158,7 @@ p.editor-help {
 
 .wi-volunteer .opp {
 	margin-left: 20px;
+	padding-right: 7.5em;
 	position: relative;
 }
 
